# odometer

./: .envrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: WORKFLOW_SETUP.md
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md
scripts/: release.sh
src/: cli.rs  domain.rs  lib.rs
src/io/: cargo.rs  cargo_toml.rs  mod.rs  package_json.rs
tests/: basic_node_workspace_test.rs  basic_rust_workspace_test.rs  helpers.rs  integration_tests.rs
